{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Gameplay",
            "id": "6f9e8745-434c-4842-ace9-b0e8dc670f85",
            "actions": [
                {
                    "name": "GunLeft",
                    "type": "Value",
                    "id": "19790e88-7aaa-48ce-8537-4b12f2643cd8",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GunRight",
                    "type": "Value",
                    "id": "e7b0967b-0806-4306-beed-c7b36ce50f29",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "31895ac7-a43f-4edd-bca0-cad6aee2c4c2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "c207eca6-4a57-40db-89fa-30266b3d6f73",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "42b92348-35dd-45af-83db-fdf138c0aa34",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootRight",
                    "type": "Button",
                    "id": "b01e9a4c-5733-4680-bc53-fb870020dc23",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootLeft",
                    "type": "Button",
                    "id": "8efbaf86-6331-4c7f-a84c-28de46641381",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThrowWeaponLeft",
                    "type": "Button",
                    "id": "0b723934-69b6-43b7-8938-e69d43ffedc4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThrowWeaponRight",
                    "type": "Button",
                    "id": "cce77124-21a1-4a99-a210-3b71763c65f7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dd88415c-dd2e-4ea9-9751-a04052097ae6",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GunLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fba8dc2-c2e4-4658-94ec-126befe4752b",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GunRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac3d1142-0e56-454d-8309-4d61874fe3da",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c8f2603-7414-4e77-a3f5-9d05dbf21619",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ac0be38-2a31-4fd0-8c26-1751a467937c",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1eaaf082-ceba-4d5e-b810-1f649219474a",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b99ca11-eb06-4374-bd79-16cb9f29dc55",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c6c05ab-7b89-4370-8731-29195491dde2",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowWeaponLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24f0040d-9bbe-4a61-a414-954ca289b2c4",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowWeaponRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}